[package]
name = "bip-addr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bip32 = "0.5.1"
bip39 = "2.0.0"
hex = "0.4.3"
libsecp256k1 = "0.7.1"
rand = "0.8.5"
ring = "0.17.7"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
unidecode = "0.3.0"

